# NullExistence

./: .gitignore  .gitmodules  CMakeLists.txt
res/config/: global.config  maps.config  maze.config  player.config  start_menu.config
res/mazes/: maze_00.txt  maze_01.txt  maze_02.txt
src/: config.cpp  config.hpp  keybinds.cpp  keybinds.hpp  main.cpp  types.hpp
src/map/: charmap.cpp  charmap.hpp  map.cpp  map.hpp  section.cpp  section.hpp  tile.cpp  tile.hpp
src/menu/: start.cpp
src/simulation/: simulation.cpp  simulation.hpp
src/simulation/mob/: player.cpp  player.hpp
src/tools/camera/: camera.cpp  camera.hpp
src/tools/time/: timer.cpp  timer.hpp
src/tools/ui/: button.cpp  button.hpp  parallaxlayer.cpp  parallaxlayer.hpp
